# evernotecli

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  Taskfile.yml  biome.json  cspell.json  package.json  pyproject.toml  tsconfig.json
.claude/rules/: typescript-style.md
.claude/skills/evercli/: SKILL.md  ref-read.md  ref-write.md
.github/: CLAUDE.md
.github/actions/setup-bun-env/: action.yml
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  bun-dependencies.md  references.md
evernote_client/: __init__.py  __main__.py  config.py  models.py  service.py
evernote_client/auth/: __init__.py  callback_server.py  oauth.py  token_store.py
evernote_client/cli/: __init__.py  read_commands.py  write_commands.py
evernote_client/client/: __init__.py  evernote_client.py  queue.py  thrift.py
evernote_client/edam/error/: ttypes.py
evernote_client/edam/limits/: constants.py
evernote_client/edam/notestore/: NoteStore.py  ttypes.py
evernote_client/edam/type/: constants.py  ttypes.py
evernote_client/edam/userstore/: UserStore.py  constants.py  ttypes.py
evernote_client/enml/: __init__.py  to_enml.py  to_markdown.py  types.py
evernote_client/mcp/: __init__.py  app.py  read_tools.py  write_tools.py
evernote_client/thrift/: Errors.thrift  Limits.thrift  Types.thrift
evernote_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  enml.py  models.py  server.py
evernote_mcp/auth/: __init__.py  callback_server.py  oauth.py  token_store.py
evernote_mcp/client/: __init__.py  evernote_client.py  thrift.py
evernote_mcp/edam/error/: ttypes.py
evernote_mcp/edam/notestore/: NoteStore.py  constants.py  ttypes.py
evernote_mcp/edam/type/: ttypes.py
evernote_mcp/edam/userstore/: UserStore.py  constants.py  ttypes.py
evernote_mcp/enml/: __init__.py  to_enml.py  to_markdown.py
evernote_mcp/server/: app.py  read_tools.py  write_tools.py
evernote_mcp/thrift/: Errors.thrift  Limits.thrift  NoteStore.thrift  Types.thrift  UserStore.thrift
src/: CLAUDE.md  config.ts  errors.ts  index.ts  logger.ts  models.ts  service.ts
src/auth/: callback-server.ts  keychain.ts  oauth.ts  token-store.ts
src/cli/: app.ts  error-handler.ts  format.ts
src/cli/commands/: content.ts  copy.ts  create.ts  drain.ts  login.ts  logout.ts  move.ts  note.ts  notebooks.ts  search.ts  serve.ts  tag.ts  tags.ts  untag.ts
src/client/: evernote-client.ts  queue.ts  store.ts  thrift-helpers.ts
src/edam/: Errors_types.d.ts  Errors_types.js  Limits_types.d.ts  NoteStore.d.ts  NoteStore_types.d.ts  NoteStore_types.js  Types_types.d.ts  Types_types.js  UserStore.d.ts  UserStore_types.d.ts
src/enml/: to-enml.ts  to-markdown.ts  types.ts
src/server/: index.ts  read-tools.ts  write-tools.ts
tests/: CLAUDE.md  conftest.py  test_callback_server.py  test_cli.py  test_client.py  test_e2e_cli.py  test_enml.py  test_private_tag.py  test_rate_limiting.py  test_server_tools.py  test_token_store.py
tests/e2e/: cli.test.ts  conftest.py  test_cli.py
tests/helpers/: test-data.ts  test-utils.ts
tests/integration/: copy.test.ts  note-content.test.ts  private-tag.test.ts  rate-limiting.test.ts  resources.test.ts  server-tools.test.ts  test_private_tag.py  test_rate_limiting.py  test_server_tools.py
tests/unit/: callback-server.test.ts  cli.test.ts  client.test.ts  enml.test.ts  test_callback_server.py  test_cli.py  test_client.py  test_enml.py  token-store.test.ts
tests/unit/auth/: keychain.test.ts
thrift/: NoteStore.thrift  UserStore.thrift
