[project]
name = "evernote-mcp"
version = "0.1.0"
description = "Evernote MCP server — read access + create/tag/move notes"
requires-python = ">=3.12"

dependencies = [
    "mcp[cli]>=1.26.0",
    "thrift>=0.22.0",
    "requests-oauthlib>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["resources", "evernote_mcp/edam"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.isort]
known-first-party = ["evernote_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["evernote_mcp", "tests"]
exclude = ["resources", "evernote_mcp/edam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
