[project]
name = "evernote-client"
version = "0.1.0"
description = "Evernote client — MCP server + CLI for Evernote"
requires-python = ">=3.12"

dependencies = [
    "click>=8.1.0",
    "mcp[cli]>=1.26.0",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "requests-oauthlib>=2.0.0",
    "persist-queue>=0.8.0",
    "ratelimit>=2.2.1",
    "tenacity>=9.1.4",
    "thrift>=0.22.0",
]

[project.scripts]
encl = "evernote_client.cli:main"

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
evernote-client = { path = "." }

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["resources", "evernote_client/edam", "gen-py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.isort]
known-first-party = ["evernote_client"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["evernote_client", "tests"]
exclude = ["resources", "evernote_client/edam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: end-to-end tests against the live Evernote API"]
